--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
   <head>
     <script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
-    <script src="js/script.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
-  <body onload="showMyFace()">
-    <video id="yourVideo" autoplay muted></video>
-    <video id="friendsVideo" autoplay></video>
+  <body >
+    <video id="yourVideo" autoplay="true"></video>
+    <video id="friendsVideo" autoplay="true"></video>
     <br />
     <button onclick="showFriendsFace()" type="button" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-facetime-video" aria-hidden="true"></span> Call</button>
+    <script src="js/script.js"></script>
+    <button onclick="showMyFace()">Pehle ye press karo</button>
   </body>
 </html>
